--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,19 +1,19 @@
 @font-face {
     font-family: "Rubik";
-    src: url("../../assets/fonts/Rubik-Light.ttf") format ("truetype");
+    src: url("/assets/fonts/Rubik-Light.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 @font-face {
     font-family: "Rubik";
-    src: url("../../assets/fonts/Rubik-Medium.ttf") format ("truetype");
+    src: url("/assets/fonts/Rubik-Regular.ttf") format("truetype");
     font-weight: 600;
     font-style: medium;
 
 }
 @font-face {
     font-family: "Rubik";
-    src: url("../../assets/fonts/Rubik-Bold.ttf") format ("truetype");
+    src: url("/assets/fonts/Rubik-Medium.ttf") format("truetype");
     font-weight: 700;
     font-style: bold;
 
