--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,8 +6,8 @@
 
   &__title {
     color: $brown;
-    font-size: 5.6rem;
-    font-weight: 700;
+    font-size: 6.2rem;
+    font-weight: 600;
     margin-left: 2rem;
     margin-bottom:0.5rem;
     margin-top:2.5rem;
@@ -22,6 +22,7 @@
     min-height: 10vh;
     min-width: 504px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
   }
   &__nav {
     display: flex;
