--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,8 +9,7 @@
     font-size: 6.2rem;
     font-weight: 600;
     margin-left: 2rem;
-    margin-bottom:0.5rem;
-    margin-top:2.5rem;
+    margin-bottom:0;
   }
 
   &__container {
@@ -20,7 +19,7 @@
     background-color: $olive;
     border: 2px solid $darkGreen;
     min-height: 10vh;
-    min-width: 504px;
+    min-width: 540px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
   }
@@ -43,6 +42,10 @@
       padding-left: 3rem;
       margin-top: 0.5rem;
       box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+
+      &:active{
+        border: 1px, solid $darkGreen;
+      }
     }
     &--menu {
       height: 8vh;
