--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -13,8 +13,10 @@
   }
   &__text {
     text-align: center;
+    text-decoration: none;
     color: $brown;
     font-size: 1.3rem;
+    font-weight: 700;
     margin: 0.5rem;
     margin-left: 0;
     margin-right: 0;
