--- a/src/components/AddBook/AddBook.scss
+++ b/src/components/AddBook/AddBook.scss
@@ -1,19 +1,19 @@
 @use "../../styles/partials/variables" as *;
 
 
-.main {
-    &__slot {
-      width: 2rem;
-      height: 12.5vh;
-      margin: 0.2rem;
-      border: 2px solid rgba(0, 0, 0, 0.07);
+// .main {
+//     &__slot {
+//       width: 2rem;
+//       height: 12.5vh;
+//       margin: 0.2rem;
+//       border: 2px solid rgba(0, 0, 0, 0.07);
   
-      &:hover {
-        border: 2px solid $darkGreen;
-        transition: (200ms);
-      }
-    }
-  }
+//       &:hover {
+//         border: 2px solid $darkGreen;
+//         transition: (200ms);
+//       }
+//     }
+  // }
   
   .book {
     &__container {
