--- a/src/components/book/Book.scss
+++ b/src/components/book/Book.scss
@@ -5,7 +5,7 @@
     width: 2rem;
     height: 12.5vh;
     margin: 0.2rem;
-    border: 2px solid rgba(0, 0, 0, 0.07);
+    border: 2px solid rgb(0, 0, 0, 0.1);
 
     &:hover {
       border: 2px solid $darkGreen;
