--- a/src/styles/partials/_resets.scss
+++ b/src/styles/partials/_resets.scss
@@ -14,6 +14,7 @@ html {
 body {
   font-size: 1.6rem;
   margin: 0;
+  color:$brown;
   font-family: "Rubik", sans-serif;
   background-color: $green;
 }
