2 more modals created

--- a/src/components/AddBook/AddBook.scss
+++ b/src/components/AddBook/AddBook.scss
@@ -27,7 +27,7 @@
       margin-left:1.5rem;
       opacity: 1;
       visibility: visible;
-      transform: translateY(0);
+      transform: translateY(1.4rem);
       transition: (500ms) ease;
     }
   
