--- a/src/components/BookModal/BookModal.scss
+++ b/src/components/BookModal/BookModal.scss
@@ -1,6 +1,9 @@
 @use "../../styles/partials/variables" as *;
 
 .book-modal {
+    height: 100vh;
+    width: 100vw;
+
   &__background {
     background-color: rgba(0, 0, 0, 0.1);
     height: 100vh;
@@ -8,10 +11,13 @@
     position: fixed;
     display: flex;
     justify-content: center;
-    top: 0;
-    left: 0;
+    margin:auto;
+
+
+ 
   }
   &__container {
+    margin:auto;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -19,9 +25,9 @@
     border-radius: 10px;
     border: 2px solid $darkGreen;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-    height: 45vh;
+    // height: 45vh;
     padding: 1rem;
-    margin-top: 10rem;
+   
   }
   &__header {
     font-size: 3.3rem;
@@ -44,10 +50,14 @@
     align-items: center;
     padding-left:1rem;
 
+    &-finished{
+        border-bottom: 2px solid $darkGreen;
+    }
+
   }
   &__input {
     font-size:1.8rem;
-
+    color:$brown;
     border: none;
     background-color: $lightOlive;
     border-left: 2px solid $darkGreen;
@@ -64,6 +74,14 @@
         background-position:0% center;
         
     }
+
+    &-finished{
+       padding-right:2.6rem;
+       font-family: "Rubik";
+       color:$brown;
+       font-weight: 600;
+    }
+
   }
 &__add{
     color: $brown;
@@ -73,6 +91,18 @@
     font-size: 2.4rem;
     margin-top: 2rem;
     margin-right:1rem;
+    padding-left:3rem;
+    padding-right:3rem;
+    padding-top:0.5rem;
+    padding-bottom:0.5rem;
+
+
+    &:hover{
+        color:$lightOlive;
+        background-color: $darkGreen;
+        border-radius: 10px;
+     
+    }
 }
   &__close {
     font-weight: 600;
@@ -81,14 +111,24 @@
     color: $brown;
     align-self: center;
     text-decoration: none;
-    padding: 1rem;
+    padding-left:3rem;
+    padding-right:3rem;
+    padding-top:0.5rem;
+    padding-bottom:0.5rem;
+
+    &:hover{
+        color:$lightOlive;
+        background-color: $darkGreen;
+        border-radius: 10px;
+     
+    }
   }
 }
 
 .buttons{
-    padding-top:2rem;
     display: flex;
     justify-content: space-between;
     width:90%;
     align-self: center;
+    margin-top:1rem;
 }
