--- a/src/components/book-drop/book-drop.scss
+++ b/src/components/book-drop/book-drop.scss
@@ -38,14 +38,12 @@ hr {
 }
 
 .book-modal {
-  height: 100vh;
-  width: 100vw;
 
   &__dropdown.active {
     position: absolute;
     opacity: 1;
     visibility: visible;
-    // transform: translateY(10rem);
+    transform: translateY(0);
     transition: (500ms) ease;
   }
 
@@ -53,7 +51,7 @@ hr {
     position: absolute;
     opacity: 0;
     visibility: hidden;
-    // transform: translateY(-10rem);
-    transition: (300ms) ease;
+    transform: translateY(-3rem);
+    transition: (500ms) ease;
   }
 }
