--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -48,7 +48,7 @@
     }
     &--menu {
       height: 8vh;
-      margin-top: -1rem;
+      margin-top: -0.5rem;
 
       &:hover{
         cursor: pointer;
@@ -66,7 +66,7 @@
   &__dropdown.active{
     opacity: 1;
     visibility: visible;
-    transform: translateY(0);
+    transform: translateY(1rem);
     transition: (500ms) ease;
   }
 
