--- a/src/components/rating/Rating.scss
+++ b/src/components/rating/Rating.scss
@@ -2,13 +2,19 @@
 
 .rating{
     display: none;
+
+    &__container{
+        padding-right:1rem;
+        padding-left:0.9rem;
+        border-left:2px solid $darkGreen;
+        background-color: $lightOlive;
+    }
 }
 
 .heart{
-    // border-right: 1px solid $green;
-    margin:0.5rem;
     margin-bottom:0;
-    transition: (300ms) ease-out;
+    padding-left:0.5rem;
+    transition: color (300ms) ease;
     cursor: pointer;
 
 }
