updating sytling and functinality

--- a/src/components/AddBook/AddBook.scss
+++ b/src/components/AddBook/AddBook.scss
@@ -1,43 +1,32 @@
 @use "../../styles/partials/variables" as *;
 
+  .add {
 
-// .main {
-//     &__slot {
-//       width: 2rem;
-//       height: 12.5vh;
-//       margin: 0.2rem;
-//       border: 2px solid rgba(0, 0, 0, 0.07);
-  
-//       &:hover {
-//         border: 2px solid $darkGreen;
-//         transition: (200ms);
-//       }
-//     }
-  // }
-  
-  .book {
-    &__container {
-      display: flex;
-      flex-direction: row;
-      align-items:end;
-    }
-  
-    &__dropdown.active {
-      position:absolute;
-      margin-left:1.5rem;
-      opacity: 1;
-      visibility: visible;
-      transform: translateY(1.4rem);
-      transition: (500ms) ease;
-    }
-  
-    &__dropdown.inactive {
-      position:absolute;
-      margin-left:1.5rem;
-      opacity: 0;
-      visibility: hidden;
-      transform: translateY(-2rem);
-      transition: (500ms) ease;
+    &-book{
+      &__container {
+        display: flex;
+        flex-direction: row;
+        align-items:end;
+      }
+      
+      &__down.active {
+        position:absolute;
+        margin-left:1.5rem;
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(-7rem);
+        transition: (500ms) ease;
+      }
+    
+      &__down.inactive {
+        position:absolute;
+        margin-left:1.5rem;
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(-10rem);
+        transition: (500ms) ease;
+      }
     }
   }
+
   
