--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,6 +10,8 @@
     font-weight: 600;
     margin-left: 2rem;
     margin-bottom:0;
+    margin-top:0;
+    align-self: flex-end;
   }
 
   &__container {
@@ -19,9 +21,9 @@
     background-color: $olive;
     border: 2px solid $darkGreen;
     min-height: 10vh;
+    height:12rem;
     min-width: 540px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
   }
   &__nav {
     display: flex;
