--- a/src/components/ClickedBook/ClickedBook.scss
+++ b/src/components/ClickedBook/ClickedBook.scss
@@ -12,10 +12,8 @@
     border-radius: 10px;
     border: 2px solid $brown;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    height: 45vh;
-    width:50vw;
-    min-width:320px;
-    min-height:400px;
+    width:320px;
+    height:400px;
     padding: 1rem;
     left:20%;
     top:20%;
@@ -30,11 +28,11 @@
     }
   }
   &__title {
-    font-size: 3.3rem;
+    font-size: 2.4rem;
     font-weight: 700;
     text-align: center;
     width: 90%;
-    margin: 0.5rem;
+    margin: 0;
   }
 
   &__author{
