--- a/src/components/shelf/shelf.scss
+++ b/src/components/shelf/shelf.scss
@@ -3,7 +3,7 @@
 .main {
   &__shelf {
     display: flex;
-    justify-content: space-evenly;
+    // justify-content: space-evenly;
     background-color: $lightOlive;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
