--- a/src/components/AddBook/AddBook.scss
+++ b/src/components/AddBook/AddBook.scss
@@ -3,6 +3,25 @@
   .add {
 
     &-book{
+      &__slot {
+        width: 3rem;
+        height: 12.5vh;
+        margin: 0.2rem;
+        border: 2px solid rgb(0, 0, 0, 0.1);
+        writing-mode: tb-rl;
+        font-size: 10px;
+        font-weight: 600;
+        text-align: center;
+        color: $yellow;
+        // background-color: $lightBrown;
+        border:2px solid $darkGreen;
+    
+    
+        &:hover {
+          border: 2px solid $yellow;
+          transition: (200ms);
+        }
+      }
       &__container {
         display: flex;
         flex-direction: row;
