--- a/src/components/BookModal/BookModal.scss
+++ b/src/components/BookModal/BookModal.scss
@@ -122,3 +122,22 @@
     align-self: center;
     margin-top:1rem;
 }
+
+.rating{
+  display: none;
+
+  &__container{
+      padding-right:1rem;
+      padding-left:0.9rem;
+      border-left:2px solid $darkGreen;
+      background-color: $lightOlive;
+  }
+}
+
+.heart{
+  margin-bottom:0;
+  padding-left:0.5rem;
+  transition: color (300ms) ease;
+  cursor: pointer;
+
+}
