--- a/src/components/ClickedBook/ClickedBook.scss
+++ b/src/components/ClickedBook/ClickedBook.scss
@@ -12,8 +12,8 @@
     border-radius: 10px;
     border: 2px solid $brown;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
-    width:320px;
-    height:400px;
+    width:350px;
+    height:475px;
     padding: 1rem;
     left:20%;
     top:20%;
@@ -23,7 +23,7 @@
     padding-bottom:1rem;
 
     &-main{
-      margin:-1rem;
+      margin:0;
       width:50%;
     }
   }
@@ -36,11 +36,11 @@
   }
 
   &__author{
-      margin:0.5rem;
+      margin:0.3rem;
       font-weight: 400;
   }
   &__series{
-    margin:0.5rem;
+    margin:0.3rem;
     font-weight: 400;
 
   }
@@ -49,4 +49,13 @@
     font-weight: 400;
   }
 
+  &__radio{
+    display: none;
+  }
+
+  &__hearts{
+    margin-bottom:0;
+    padding-left:0.5rem;
+  
+  }
 }
