--- a/src/components/BookModal/BookModal.scss
+++ b/src/components/BookModal/BookModal.scss
@@ -6,6 +6,8 @@
 
   &__container {
     position: fixed;
+    top: 10rem;
+    left: -30rem;
     display: flex;
     flex-direction: column;
     align-items: start;
