--- a/src/components/DecorModal/DecorModal.scss
+++ b/src/components/DecorModal/DecorModal.scss
@@ -1,17 +1,12 @@
 @use "../../styles/partials/variables" as *;
 
 .decor-modal {
-  &__background {
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-  }
   &__container {
     margin: auto;
     display: flex;
+    position:fixed;
+    top: 6rem;
+    left: -35rem;
     flex-direction: column;
     align-items: start;
     background-color: $green;
