--- a/src/components/PlantModal/PlantModal.scss
+++ b/src/components/PlantModal/PlantModal.scss
@@ -1,18 +1,12 @@
 @use "../../styles/partials/variables" as *;
 
 .plant-modal {
-
-    &__background{
-        height: 100vh;
-        width: 100vw;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        margin:auto;
-    }
     &__container {
         margin:auto;
+        position:fixed;
         display: flex;
+        top: 6rem;
+        left: -35rem;
         flex-direction: column;
         align-items: start;
         background-color: $green;
