--- a/src/components/book/Book.scss
+++ b/src/components/book/Book.scss
@@ -33,8 +33,11 @@
     background-color: $lightOlive;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
-    // height: 13vh;
     margin: 0.5rem;
+  }
+
+  &__image{
+    height:10rem;
   }
 }
 
