--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -59,4 +59,23 @@ hr {
       transition: (500ms) ease;
     }
   }
+  &-view{
+    &__drop.active {
+      position: absolute;
+      opacity: 1;
+      left:-6.5rem;
+      top:7.1rem;
+      visibility: visible;
+      transform: translateY(-7rem);
+      transition: (500ms) ease;
+    }
+
+    &__drop.inactive {
+      position: absolute;
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(-10rem);
+      transition: (500ms) ease;
+    }
+  }
 }
