--- a/src/components/book/Book.scss
+++ b/src/components/book/Book.scss
@@ -3,7 +3,7 @@
 .main {
   &__slot {
     display:flex;
-    width: 3.2rem;
+    width: 3rem;
     height: 12.5vh;
     margin: 0.2rem;
     border: 2px solid rgb(0, 0, 0, 0.1);
@@ -14,48 +14,14 @@
     align-items: center;
     text-align: center;
     color: $yellow;
-    background-image:url("../../assets/images/leather.jpg");
+    background-color: $lightBrown;
     border:2px solid $brown;
-    border-radius: 3px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
-    text-overflow: ellipsis;
+
 
     &:hover {
-      border: 3px solid $yellow;
+      border: 2px solid $yellow;
       transition: (200ms);
-    }
-  }
-
-  &__shelf-books{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: $lightOlive;
-    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-    margin: 0.5rem;
-  }
-
-  &__image{
-    height:10rem;
-
-    &-ladder{
-      height:62rem;
-      width:15rem;
-      position: absolute;
-      left:38rem;
-      top:23rem;
-    }
-    &-zebra{
-      width:10rem;
-      height:5rem;
-      margin-top: 4.8rem;
-    }
-    &-dino{
-      width:15rem;
-      height:7rem;
-      margin-top: 2.8rem;
-
     }
   }
 }
