--- a/src/components/shelf/shelf.scss
+++ b/src/components/shelf/shelf.scss
@@ -1,6 +1,13 @@
 @use "../../styles/partials/variables" as *;
 
-.shelf{
-  display:flex;
-  flex-wrap: wrap;
+.main {
+  &__shelf {
+    display: flex;
+    // justify-content: space-evenly;
+    background-color: $lightOlive;
+    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    height: 13vh;
+    margin: 0.5rem;
+  }
 }
