--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,3 +12,15 @@ $lightBrown:#8F532F;
 
 $yellow:#F4C32F;
 $red:#F84B4B;
+
+$purple:#BA99FB;
+$darkPurple:#6E23FF;
+
+$blue:#93DCFF;
+$darkBlue:#01044F;
+
+$pink:#FF9ED5;
+$darkPink:#C83481;
+
+$turq:#44C6B1;
+$darkTurq:#157969;
