--- a/src/components/book/Book.scss
+++ b/src/components/book/Book.scss
@@ -22,34 +22,40 @@
     text-overflow: ellipsis;
 
     &:hover {
-      border: 3px solid $yellow;
+      border: 2px solid $yellow;
       transition: (100ms);
+      cursor: default;
+
     }
 
     &-purple {
       @extend .main__slot;
       background-color: $purple;
+      border: 2px solid $darkPurple;
       background-image: none;
-
-      &:hover{
-        border:3px solid $darkPurple;
-      }
-   
     }
-    &-blue{
+    &-blue {
       @extend .main__slot;
       background-image: none;
+      background-color: $blue;
+      border: 2px solid $darkBlue;
+      color:$brown;
 
     }
-    &-pink{
+    &-pink {
       @extend .main__slot;
-      background-image: none;
-
+      background-image: none;   
+      background-color: $pink;
+      border: 2px solid $darkPink;
+      color:$brown;
+  
     }
-    &-turqoise{
+    &-turquoise {
       @extend .main__slot;
-      background-image: none;
-
+      background-image: none;   
+      background-color: $turq;
+      border: 2.5px solid $darkTurq;
+      color:$brown;
     }
   }
 
