--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -13,8 +13,8 @@ $lightBrown:#8F532F;
 $yellow:#F4C32F;
 $red:#F84B4B;
 
-$purple:#BA99FB;
-$darkPurple:#6E23FF;
+$purple:#6E23FF;
+$darkPurple:#50007B;
 
 $blue:#93DCFF;
 $darkBlue:#01044F;
@@ -23,4 +23,4 @@ $pink:#FF9ED5;
 $darkPink:#C83481;
 
 $turq:#44C6B1;
-$darkTurq:#157969;
+$darkTurq:#157969
