--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -10,7 +10,7 @@ $lightOlive:#D3DBC7;
 $brown:#4B1F19;
 $lightBrown:#8F532F;
 
-$yellow:#F4C32F;
+$yellow:#D6B81A;
 $red:#F84B4B;
 
 $purple:#6E23FF;
