--- a/src/components/ClickedBook/ClickedBook.scss
+++ b/src/components/ClickedBook/ClickedBook.scss
@@ -4,7 +4,7 @@
   height: 100vh;
   width: 100vw;
   &__container {
-    position: fixed;
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,8 +15,8 @@
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
     width: 350px;
     padding: 1rem;
-    left: 20%;
-    top: 20%;
+    left: 6.2rem;
+    top:0;
   }
   &__decal {
     &-top {
@@ -30,7 +30,6 @@
     &-main {
       margin: 0;
       width: 50%;
-      z-index: -6;
     }
   }
   &__title {
