--- a/src/components/Delete/Delete.scss
+++ b/src/components/Delete/Delete.scss
@@ -3,26 +3,24 @@
 .delete {
     &__modal{
         display:flex;
-        justify-content: space-around;
-        position: absolute;
-        top:25.7rem;
-        right:2.5rem;
+        justify-content: space-evenly;
         background-color: $lightBrown;
         border-radius: 10px;
         border: 2px solid $brown;
-        box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
-        width:15rem;
+        box-shadow: 2px 2px 5px rgba(214, 184, 26, 0.9);
+        width:30rem;
         
     }
     &__text{
-        font-size: 1.8rem;
+        font-size: 2.4rem;
         font-weight: 600;
-        padding:1rem;
+        padding:3rem;
         margin:0;
 
         &-right{
             border-left:2px solid $brown;
-            padding-right:0.5rem;
+            margin-left:1rem;
+            padding-right:2rem;
         }
 
         &:hover{
