--- a/src/components/Delete/Delete.scss
+++ b/src/components/Delete/Delete.scss
@@ -4,9 +4,9 @@
     &__modal{
         display:flex;
         justify-content: space-evenly;
-        background-color: $lightBrown;
+        background-color: $green;
         border-radius: 10px;
-        border: 2px solid $brown;
+        border: 2px solid $darkGreen;
         box-shadow: 2px 2px 5px rgba(214, 184, 26, 0.9);
         width:30rem;
         
@@ -18,13 +18,13 @@
         margin:0;
 
         &-right{
-            border-left:2px solid $brown;
+            border-left:2px solid $darkGreen;
             margin-left:1rem;
             padding-right:2rem;
         }
 
         &:hover{
-            color:$yellow;
+            color:$darkGreen;
             text-decoration: underline;
         }
 
