put reequest working

--- a/src/components/book/Book.scss
+++ b/src/components/book/Book.scss
@@ -68,9 +68,9 @@
     &-ladder {
       height: 62rem;
       width: 15rem;
-      position: absolute;
-      left: 38rem;
-      top: 23rem;
+      position: relative;
+      // left: 38rem;
+      // top: 23rem;
     }
     &-zebra {
       width: 10rem;
