--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -11,12 +11,12 @@
         border-radius:10px;
         border:1px solid $darkGreen;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-        width:90%;
+        width:480px;
         padding:2rem;
         min-height:30vh;
         min-width:350px;
         margin:auto;
-        margin-top:20%;
+        margin-top:10rem;
 
     }
     &__title{
