--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -104,6 +104,7 @@
   }
   &__text{
     font-size: 1.3rem;
+    font-weight: 600;
     margin:0.5rem;
     padding-bottom:1rem;
     border-bottom:1px dotted $darkGreen;
