--- a/src/components/book/Book.scss
+++ b/src/components/book/Book.scss
@@ -64,23 +64,33 @@
 
   &__image {
     height: 10rem;
+    margin-top:1rem;
 
     &-ladder {
-      height: 68rem;
+      height: 62rem;
       width: 15rem;
       position: absolute;
       top: 24rem;
       margin-left:35rem;
     }
     &-zebra {
-      width: 10rem;
-      height: 5rem;
-      margin-top: 4.8rem;
+      width: 15rem;
+      height: 6rem;
+      margin-top: 6.3rem;
     }
     &-dino {
       width: 15rem;
       height: 7rem;
       margin-top: 2.8rem;
+    }
+    &-hanging{
+       height:12rem;
+    }
+    &-pothos{
+      height:10rem;
+    margin-top:1rem;
+    margin-left:-3rem;
+
     }
   }
 }
