--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -29,13 +29,11 @@
     font-weight: 700;
     margin: 0;
   }
-  &__text{
-    font-weight: 600;;
+  &__text {
+    font-weight: 600;
   }
   &__img {
     height: 25vh;
     padding: 0;
-
- 
   }
 }
