--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,26 +1,26 @@
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1024px;
 
-$green: #95B294;
-$lightGreen: #F4F6F1;
-$darkGreen:#516650;
-$olive: #A8B094;
-$lightOlive:#D3DBC7;
+$green: #95b294;
+$lightGreen: #f4f6f1;
+$darkGreen: #516650;
+$olive: #a8b094;
+$lightOlive: #d3dbc7;
 
-$brown:#4B1F19;
-$lightBrown:#8F532F;
+$brown: #4b1f19;
+$lightBrown: #8f532f;
 
-$yellow:#D6B81A;
-$red:#F84B4B;
+$yellow: #d6b81a;
+$red: #f84b4b;
 
-$purple:#6E23FF;
-$darkPurple:#50007B;
+$purple: #6e23ff;
+$darkPurple: #50007b;
 
-$blue:#93DCFF;
-$darkBlue:#01044F;
+$blue: #93dcff;
+$darkBlue: #01044f;
 
-$pink:#FF9ED5;
-$darkPink:#C83481;
+$pink: #ff9ed5;
+$darkPink: #c83481;
 
-$turq:#44C6B1;
-$darkTurq:#157969
+$turq: #44c6b1;
+$darkTurq: #157969;
