--- a/src/components/DecorModal/DecorModal.scss
+++ b/src/components/DecorModal/DecorModal.scss
@@ -6,14 +6,14 @@
     display: flex;
     position:fixed;
     top: 6rem;
-    left: -35rem;
+    left: -20.5rem;
     flex-direction: column;
     align-items: start;
     background-color: $green;
     border-radius: 10px;
     border: 2px solid $darkGreen;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-    width: 420px;
+    width: 34rem;
     padding: 1rem;
   }
   &__header {
@@ -21,7 +21,7 @@
     font-weight: 700;
     text-align: center;
     width: 90%;
-    margin: 0.5rem;
+    margin: 0rem;
     padding-bottom: 1rem;
   }
   &__grid {
@@ -31,7 +31,7 @@
     justify-content: space-evenly;
   }
   &__decor {
-    height: 12rem;
+    height: 8rem;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
     border: 2px solid $darkGreen;
     border-radius: 3px;
