--- a/src/components/PlantModal/PlantModal.scss
+++ b/src/components/PlantModal/PlantModal.scss
@@ -6,24 +6,24 @@
         position:fixed;
         display: flex;
         top: 6rem;
-        left: -35rem;
+        left: -20.5rem;
         flex-direction: column;
         align-items: start;
         background-color: $green;
         border-radius: 10px;
         border: 2px solid $darkGreen;
         box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
-        width:420px;
+        width:34rem;
         padding: 1rem;
        
       }
     &__header {
-        font-size: 3.3rem;
-        font-weight: 700;
-        text-align: center;
-        width: 90%;
-        margin: 0.5rem;
-        padding-bottom: 1rem;
+      font-size: 3.3rem;
+      font-weight: 700;
+      text-align: center;
+      width: 90%;
+      margin: 0;
+      padding-bottom: 1rem;
       }
       &__grid{
         display:flex;
@@ -32,7 +32,7 @@
         justify-content: space-evenly;
       }
       &__plant{
-        height:12rem;
+        height:9rem;
         box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
         border:2px solid $darkGreen;
         border-radius: 3px;
