--- a/src/components/bookshelf/bookshelf.scss
+++ b/src/components/bookshelf/bookshelf.scss
@@ -6,8 +6,9 @@
         flex-direction: column;
         justify-content: space-between;
         background-color:$olive;
-        height:85vh;
-        width: 520px;
+        min-height: 59rem;
+        min-width: 372px;
+        max-width:412px;
         margin:1rem;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
         border-radius: 5px;
