--- a/src/components/book/Book.scss
+++ b/src/components/book/Book.scss
@@ -4,11 +4,11 @@
   &__slot {
     display: flex;
     width: 3.2rem;
-    height: 16vh;
-    margin: 0.2rem;
+    height: 20vh;
+    margin: 0.1rem;
     border: 2px solid rgb(0, 0, 0, 0.1);
     writing-mode: tb-rl;
-    font-size: 10px;
+    font-size: 1.2rem;
     font-weight: 700;
     justify-content: center;
     align-items: center;
