--- a/src/components/book/Book.scss
+++ b/src/components/book/Book.scss
@@ -82,6 +82,14 @@
       height: 7rem;
       margin-top: 2.8rem;
     }
+    &-hanging {
+      height: 12rem;
+    }
+    &-pothos {
+      height: 10rem;
+      margin-top: 1rem;
+      margin-left: -3rem;
+    }
   }
 }
 
